@@ -1,5 +1,6 @@
 #include <stdio.h>
 #include <string.h>
+#include <stdlib.h>
 #include <malloc.h>
 #include <fidoconf/fidoconf.h>
 #include <fidoconf/common.h>
@@ -23,37 +24,41 @@ void Usage()
     printf("\t-h or --help  This help screen\n\n");
 }
 
-void processOption(char **argv, int i, int argc)
-{
-    if (strchr(argv[i], 'q')) enable_quiet=1;
-    if (strchr(argv[i], 'd')) enable_debug=1;
-    if ((strchr(argv[i], 'h'))||(!strcmp(argv[i]+1, "-help")))
-    {
-        Usage();
-        exit(0);
-    }
-    if (strchr(argv[i], 'c'))
-    {
-        if (i+1>=argc)
-        {
-            fprintf(stderr, "Incorrect command line parameter.\n");
-            Usage();
-            exit(-1);
-        }
-        fidoConfigFile=(char *)smalloc(strlen(argv[i+1]));
-        sprintf(fidoConfigFile, "%s", argv[i+1]);
-    }
-}
-
 void getOpts(int argc, char **argv)
 {
     int i;
+    int c_asked=0;
+
+    fidoConfigFile=getenv("FIDOCONFIG");
+
     for (i=1;i<argc;i++)
     {
         if (argv[i][0]=='-')
         {
-            processOption(argv, i, argc);
-        } else
+            c_asked=0;
+
+            if (strchr(argv[i], 'q')) enable_quiet=1;
+            if (strchr(argv[i], 'd')) enable_debug=1;
+            if ((strchr(argv[i], 'h'))||(!strcmp(argv[i]+1, "-help")))
+            {
+                Usage();
+                exit(0);
+            }
+            if (strchr(argv[i], 'c'))
+            {
+                if (i+1>=argc)
+                {
+                    fprintf(stderr, "Incorrect command line parameter.\n");
+                    Usage();
+                    exit(-1);
+                }
+                fidoConfigFile=(char *)smalloc(strlen(argv[i+1]));
+                sprintf(fidoConfigFile, "%s", argv[i+1]);
+                c_asked=1;
+            }
+            if (c_asked) i++;
+        }
+        else
         {
             fprintf(stderr, "Incorrect command line parameter \"%s\"\n", argv[i]);
             Usage();
